Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "70527d4e-fa33-4ce3-b032-a1ab73ce35f8"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:00:34.542250+00:00",
@@ -855,7 +855,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a2a40f4a-50fb-497e-b238-c0f89a2f099a"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:00:51.577781+00:00",
@@ -1650,7 +1650,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8e0300c8-3ecc-4c8d-a272-a7e2bc2e733a"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:01:01.729849+00:00",
@@ -2548,7 +2548,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d6ac9be4-fe7c-4222-bf28-0bb3c9e7d6ab"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:01:30.075322+00:00",
@@ -3606,7 +3606,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "2ee60928-725f-4f09-b1ac-d220cacd2e45"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:01:42.682490+00:00",
@@ -4450,7 +4450,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b4d48fe9-679f-4b45-8d82-6317a2b0441f"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:02:34.400346+00:00",
@@ -5077,7 +5077,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "python",
-          "output_collection_id": "9255ca91-b049-413d-a1f2-81c00ffdd943"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:02:53.802779+00:00",
@@ -5244,7 +5244,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "258fec47-c639-49c0-bdc2-2cd7a609e36d"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-19T04:20:59.563444+00:00",
@@ -5252,7 +5252,7 @@
         }
       },
       "execution_count": null,
-      "source": "import nltk\nfrom nltk.corpus import stopwords\nfrom nltk.stem import PorterStemmer\nimport string\n\n# Initialize a stemmer\nstemmer = PorterStemmer()\n\ndef clean_description(description):\n    # Lowercase the description\n    description = description.lower()\n    # Remove punctuation\n    description = description.translate(str.maketrans('', '', string.punctuation))\n    return description\n\n# Apply the cleaning function to each job description\nunclean_df3['Job Description'] = unclean_df3['Job Description'].apply(clean_description)\n",
+      "source": "import nltk\nfrom nltk.corpus import stopwords\nfrom nltk.stem import PorterStemmer\nimport string\n\n# Download the set of stop words the first time\nnltk.download('stopwords')\nstop_words = set(stopwords.words('english'))\n\n# Initialize a stemmer\nstemmer = PorterStemmer()\n\ndef clean_description(description):\n    # Lowercase the description\n    description = description.lower()\n    # Remove punctuation\n    description = description.translate(str.maketrans('', '', string.punctuation))\n    return description\n\n# Apply the cleaning function to each job description\nunclean_df3['Job Description'] = unclean_df3['Job Description'].apply(clean_description)\n",
       "outputs": []
     },
     {
@@ -5999,7 +5999,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "0ada2d5a-f48c-4693-89ac-4e0a1c3f8ee7"
+      "last_transaction_id": "468639a7-4e6a-400c-97cf-17a6c0a54176"
     }
   },
   "nbformat": 4,
