Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6295,6 +6295,7 @@
               "columnPosition": 24
             },
             "Python": {
+              "aggregation": "SUM",
               "columnPosition": 19
             },
             "Rating": {
@@ -6338,7 +6339,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689740844477,
+          "updated": 1689740869563,
           "views": [
             {
               "annotationRules": [],
@@ -6409,7 +6410,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "1a1c8450-ceb0-4bee-a054-39c87fe5073d"
+      "last_transaction_id": "f029b958-e650-4a8a-ab7f-872b92f94c93"
     }
   },
   "nbformat": 4,
