--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5650,11 +5650,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ab05b10c-83a2-46db-85c6-d39838ea6c1d"
+          "output_collection_id": "5fb75d6a-0d81-45fb-a506-1a5503cc6e5d"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:24:18.465716+00:00",
-          "start_time": "2023-07-19T04:24:18.094186+00:00"
+          "end_time": "2023-07-19T04:43:16.279488+00:00",
+          "start_time": "2023-07-19T04:43:15.919153+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -6254,6 +6254,52 @@
             "sampling_time": "2023-07-19T04:24:18.273063",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "dce72af3-732d-49ea-8f94-67e3a7c0ca2c": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "dce72af3-732d-49ea-8f94-67e3a7c0ca2c",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:43:16.092092",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -6317,6 +6363,7 @@
               "columnPosition": 9
             },
             "Spark": {
+              "aggregation": "SUM",
               "columnPosition": 23
             },
             "Tableau": {
@@ -6339,7 +6386,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689740869563,
+          "updated": 1689741259565,
           "views": [
             {
               "annotationRules": [],
@@ -6410,7 +6457,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "f029b958-e650-4a8a-ab7f-872b92f94c93"
+      "last_transaction_id": "5f3fa68a-7d5d-4be6-b8df-4eddeaff5167"
     }
   },
   "nbformat": 4,
