--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5629,15 +5629,15 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "2efb64e4-531a-41e9-9c8c-da9dc1df48ec"
+          "output_collection_id": "806027d5-cfff-48ce-b039-8e93da32562c"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:24:18.086482+00:00",
-          "start_time": "2023-07-19T04:24:17.807724+00:00"
+          "end_time": "2023-07-19T04:44:55.428076+00:00",
+          "start_time": "2023-07-19T04:44:55.147259+00:00"
         }
       },
       "execution_count": null,
-      "source": "unclean_df3['Python']=unclean_df3['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df3['Excel']=unclean_df3['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df3['SQL']=unclean_df3['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df3['Tableau']=unclean_df3['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df3['Spark']=unclean_df3['Job Description'].apply(lambda x: 1 if \"Spark\" in x.lower() else 0)\nunclean_df3['Machine Learing']=unclean_df3['Job Description'].apply(lambda x: 1 if \"machine learing\" in x.lower() else 0)\nunclean_df3['AWS']=unclean_df3['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
+      "source": "unclean_df3['Python']=unclean_df3['Job Description'].apply(lambda x: 1 if \"python\" in x.lower() else 0)\nunclean_df3['Excel']=unclean_df3['Job Description'].apply(lambda x: 1 if \"excel\" in x.lower() else 0)\nunclean_df3['SQL']=unclean_df3['Job Description'].apply(lambda x: 1 if \"sql\" in x.lower() else 0)\nunclean_df3['Tableau']=unclean_df3['Job Description'].apply(lambda x: 1 if \"tableau\" in x.lower() else 0)\nunclean_df3['Spark']=unclean_df3['Job Description'].apply(lambda x: 1 if \"spark\" in x.lower() else 0)\nunclean_df3['Machine Learing']=unclean_df3['Job Description'].apply(lambda x: 1 if \"machine learning\" in x.lower() else 0)\nunclean_df3['AWS']=unclean_df3['Job Description'].apply(lambda x: 1 if \"aws\" in x.lower() else 0)",
       "outputs": []
     },
     {
@@ -5650,11 +5650,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5fb75d6a-0d81-45fb-a506-1a5503cc6e5d"
+          "output_collection_id": "743ec00a-a476-4e18-931d-307a6cf79f7f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:43:16.279488+00:00",
-          "start_time": "2023-07-19T04:43:15.919153+00:00"
+          "end_time": "2023-07-19T04:44:59.710701+00:00",
+          "start_time": "2023-07-19T04:44:59.351723+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -6300,6 +6300,52 @@
             "sampling_time": "2023-07-19T04:43:16.092092",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "dd072387-b891-431a-80f4-a12d88b109d3": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "dd072387-b891-431a-80f4-a12d88b109d3",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:44:59.523083",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -6455,7 +6501,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "c69590c4-cfe9-450e-983f-9c80e7ee7224"
+      "last_transaction_id": "62d81b1c-0ee8-4a25-bdde-955ecd26bbe3"
     }
   },
   "nbformat": 4,
