Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6384,6 +6384,7 @@
               "columnPosition": 7
             },
             "Machine Learing": {
+              "aggregation": "SUM",
               "columnPosition": 24
             },
             "Python": {
@@ -6408,6 +6409,7 @@
               "columnPosition": 9
             },
             "Spark": {
+              "aggregation": "SUM",
               "columnPosition": 23
             },
             "Tableau": {
@@ -6430,7 +6432,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689741820526,
+          "updated": 1689741921072,
           "views": [
             {
               "annotationRules": [],
@@ -6474,7 +6476,8 @@
               "userID": ""
             }
           ]
-        }
+        },
+        "scrolled": true
       },
       "execution_count": null,
       "source": "unclean_df3",
@@ -6501,7 +6504,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "62d81b1c-0ee8-4a25-bdde-955ecd26bbe3"
+      "last_transaction_id": "959d2a5c-1d4d-45ab-9871-1a484d4cf01a"
     }
   },
   "nbformat": 4,
