Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6354,6 +6354,7 @@
           },
           "fieldMetadata": {
             "AWS": {
+              "aggregation": "SUM",
               "columnPosition": 25
             },
             "Company Name": {
@@ -6363,6 +6364,7 @@
               "columnPosition": 15
             },
             "Excel": {
+              "aggregation": "SUM",
               "columnPosition": 20
             },
             "Founded": {
@@ -6388,6 +6390,7 @@
               "columnPosition": 24
             },
             "Python": {
+              "aggregation": "SUM",
               "columnPosition": 19
             },
             "Rating": {
@@ -6397,6 +6400,7 @@
               "columnPosition": 14
             },
             "SQL": {
+              "aggregation": "SUM",
               "columnPosition": 21
             },
             "Salary Estimate": {
@@ -6413,6 +6417,7 @@
               "columnPosition": 23
             },
             "Tableau": {
+              "aggregation": "SUM",
               "columnPosition": 22
             },
             "Type of ownership": {
@@ -6432,7 +6437,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689741921072,
+          "updated": 1689742043260,
           "views": [
             {
               "annotationRules": [],
@@ -6504,7 +6509,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "959d2a5c-1d4d-45ab-9871-1a484d4cf01a"
+      "last_transaction_id": "582b593d-2561-45e5-85c8-b7f19f2c942a"
     }
   },
   "nbformat": 4,
