--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6437,7 +6437,7 @@
             }
           },
           "simpleTable": false,
-          "updated": 1689742043260,
+          "updated": 1689742498404,
           "views": [
             {
               "annotationRules": [],
@@ -6487,6 +6487,75 @@
       "execution_count": null,
       "source": "unclean_df3",
       "outputs": []
+    },
+    {
+      "id": "3cb30457-2921-43c3-b69a-f47cc46a39e6",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "4d9ef523-0133-48d0-a4ad-bf019dd31a75"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T04:55:27.109243+00:00",
+          "start_time": "2023-07-19T04:55:26.883820+00:00"
+        },
+        "datalink": {
+          "bb1c62e5-6855-4164-b1fb-bdb48e05a5f5": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 1,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 10544,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 10544,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "bb1c62e5-6855-4164-b1fb-bdb48e05a5f5",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:55:26.947602",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_23eed8b59f5b4fa6bb7d860fcd1bd38a"
+          }
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df3['Job Description']",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -6509,7 +6578,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "582b593d-2561-45e5-85c8-b7f19f2c942a"
+      "last_transaction_id": "5939ff4e-107e-4b9c-af96-5fdacfdc3930"
     }
   },
   "nbformat": 4,
