--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6551,6 +6551,73 @@
             "user_variable_name": null,
             "variable_name": "unk_dataframe_23eed8b59f5b4fa6bb7d860fcd1bd38a"
           }
+        },
+        "dx": {
+          "dashboard": {
+            "multiViews": []
+          },
+          "fieldMetadata": {},
+          "updated": 1689742570848,
+          "views": [
+            {
+              "annotationRules": [],
+              "chart": {},
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "type": "public",
+              "userID": ""
+            },
+            {
+              "annotationRules": [],
+              "chart": {
+                "facets": [
+                  {
+                    "chartMode": "wordcloud",
+                    "confoRules": [],
+                    "faceting": {
+                      "textDataFormat": "sentence",
+                      "wordColor": "random",
+                      "wordData": "Job Description"
+                    },
+                    "name": "wordcloud",
+                    "title": "Word Cloud"
+                  }
+                ],
+                "suggestionFields": [
+                  "Job Description - Dimension"
+                ]
+              },
+              "chartMode": "grid",
+              "confoRules": [],
+              "decoration": {
+                "footer": "",
+                "subtitle": "",
+                "title": "Table"
+              },
+              "facets": [],
+              "filterSettings": {
+                "SHOW_FILTER_PANEL": true,
+                "filters": []
+              },
+              "id": "first-view",
+              "isDefault": true,
+              "isTransitory": true,
+              "type": "public",
+              "userID": ""
+            }
+          ]
         }
       },
       "execution_count": null,
@@ -6578,7 +6645,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "5939ff4e-107e-4b9c-af96-5fdacfdc3930"
+      "last_transaction_id": "3fa26fa1-2565-40eb-88cb-eb71253c915d"
     }
   },
   "nbformat": 4,
