Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6557,7 +6557,7 @@
             "multiViews": []
           },
           "fieldMetadata": {},
-          "updated": 1689742570848,
+          "updated": 1689742603417,
           "views": [
             {
               "annotationRules": [],
@@ -6582,6 +6582,7 @@
             {
               "annotationRules": [],
               "chart": {
+                "barProjection": "horizontal",
                 "facets": [
                   {
                     "chartMode": "wordcloud",
@@ -6595,16 +6596,14 @@
                     "title": "Word Cloud"
                   }
                 ],
-                "suggestionFields": [
-                  "Job Description - Dimension"
-                ]
+                "suggestionFields": []
               },
-              "chartMode": "grid",
+              "chartMode": "bar",
               "confoRules": [],
               "decoration": {
                 "footer": "",
                 "subtitle": "",
-                "title": "Table"
+                "title": "Bar Chart"
               },
               "facets": [],
               "filterSettings": {
@@ -6645,7 +6644,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "3fa26fa1-2565-40eb-88cb-eb71253c915d"
+      "last_transaction_id": "4753a461-c5cb-44d8-a518-2c03c4fa3c5d"
     }
   },
   "nbformat": 4,
