--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6498,11 +6498,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4d9ef523-0133-48d0-a4ad-bf019dd31a75"
+          "output_collection_id": "2ae5bc80-7348-4cdd-82ae-2e7a4937bc71"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:55:27.109243+00:00",
-          "start_time": "2023-07-19T04:55:26.883820+00:00"
+          "end_time": "2023-07-19T04:57:22.424311+00:00",
+          "start_time": "2023-07-19T04:57:22.200242+00:00"
         },
         "datalink": {
           "bb1c62e5-6855-4164-b1fb-bdb48e05a5f5": {
@@ -6550,6 +6550,52 @@
             "sampling_time": "2023-07-19T04:55:26.947602",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_23eed8b59f5b4fa6bb7d860fcd1bd38a"
+          },
+          "86d9435a-5ad7-4589-b878-5d9eabf8ab6a": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 1,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 10544,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 10544,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "86d9435a-5ad7-4589-b878-5d9eabf8ab6a",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T04:57:22.264249",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_db4aa024a2f74120b27ff5a45daa6b86"
           }
         },
         "dx": {
@@ -6557,7 +6603,7 @@
             "multiViews": []
           },
           "fieldMetadata": {},
-          "updated": 1689742603417,
+          "updated": 1689742650950,
           "views": [
             {
               "annotationRules": [],
@@ -6576,43 +6622,6 @@
               },
               "id": "first-view",
               "isDefault": true,
-              "type": "public",
-              "userID": ""
-            },
-            {
-              "annotationRules": [],
-              "chart": {
-                "barProjection": "horizontal",
-                "facets": [
-                  {
-                    "chartMode": "wordcloud",
-                    "confoRules": [],
-                    "faceting": {
-                      "textDataFormat": "sentence",
-                      "wordColor": "random",
-                      "wordData": "Job Description"
-                    },
-                    "name": "wordcloud",
-                    "title": "Word Cloud"
-                  }
-                ],
-                "suggestionFields": []
-              },
-              "chartMode": "bar",
-              "confoRules": [],
-              "decoration": {
-                "footer": "",
-                "subtitle": "",
-                "title": "Bar Chart"
-              },
-              "facets": [],
-              "filterSettings": {
-                "SHOW_FILTER_PANEL": true,
-                "filters": []
-              },
-              "id": "first-view",
-              "isDefault": true,
-              "isTransitory": true,
               "type": "public",
               "userID": ""
             }
@@ -6644,7 +6653,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4753a461-c5cb-44d8-a518-2c03c4fa3c5d"
+      "last_transaction_id": "95f50507-346b-4e1c-ad8b-b5ff890276c2"
     }
   },
   "nbformat": 4,
