--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -5972,9 +5972,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "f0040e2a-23fc-4558-91a7-a09c804418de"
+          "output_collection_id": "c52bd687-5cf5-42a6-a930-64ce790750c8"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-07-19T16:25:35.389307+00:00",
+          "start_time": "2023-07-19T16:25:34.351998+00:00"
+        }
       },
       "execution_count": null,
       "source": "import nltk\nfrom nltk.corpus import stopwords\nfrom nltk.stem import PorterStemmer\nimport string\n\n# Download the set of stop words the first time\nnltk.download('stopwords')\nstop_words = set(stopwords.words('english'))\n\n# Initialize a stemmer\nstemmer = PorterStemmer()\n\ndef clean_description(description):\n    # Lowercase the description\n    description = description.lower()\n    # Remove punctuation\n    description = description.translate(str.maketrans('', '', string.punctuation))\n    return description\n\n# Apply the cleaning function to each job description\nunclean_df3['Job Description'] = unclean_df3['Job Description'].apply(clean_description)\n",
@@ -5993,8 +5996,8 @@
           "output_collection_id": "2463d017-36f3-4ed2-9e58-bb7a13837f4c"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:44:55.428076+00:00",
-          "start_time": "2023-07-19T04:44:55.147259+00:00"
+          "end_time": "2023-07-19T16:25:35.660073+00:00",
+          "start_time": "2023-07-19T16:25:35.398546+00:00"
         }
       },
       "execution_count": null,
@@ -6011,11 +6014,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "2331fc7c-190a-4dee-a8a8-c2a2f71fbdfd"
+          "output_collection_id": "f96b8398-529a-4dc9-af89-cac8b83a28d1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-19T04:44:59.710701+00:00",
-          "start_time": "2023-07-19T04:44:59.351723+00:00"
+          "end_time": "2023-07-19T16:25:36.038219+00:00",
+          "start_time": "2023-07-19T16:25:35.670804+00:00"
         },
         "datalink": {
           "14ce3902-4787-4527-b196-1d667eecf7db": {
@@ -6707,6 +6710,52 @@
             "sampling_time": "2023-07-19T04:44:59.523083",
             "user_variable_name": "unclean_df",
             "variable_name": "unclean_df"
+          },
+          "7fc3e2c0-ad5b-4a58-9d69-a797d546d686": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 24,
+              "orig_num_rows": 659,
+              "orig_size_bytes": 131800,
+              "truncated_num_cols": 24,
+              "truncated_num_rows": 659,
+              "truncated_size_bytes": 131800,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "7fc3e2c0-ad5b-4a58-9d69-a797d546d686",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-19T16:25:35.854126",
+            "user_variable_name": "unclean_df",
+            "variable_name": "unclean_df"
           }
         },
         "dx": {
@@ -6848,6 +6897,23 @@
       "execution_count": null,
       "source": "unclean_df3",
       "outputs": []
+    },
+    {
+      "id": "479f2472-2147-43c4-98f6-aa4032409ca6",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "9935db0c-0977-4e05-9398-bee166bc65d4"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-19T16:36:23.971948+00:00",
+          "start_time": "2023-07-19T16:36:19.323587+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "import pandas as pd\nimport nltk\nfrom nltk.corpus import stopwords\nfrom nltk.tokenize import word_tokenize\nfrom collections import Counter\nimport matplotlib.pyplot as plt\n\n# Load the dataset\ndf = pd.read_csv('Uncleaned_DS_jobs.csv')\n\n# Download the set of stop words the first time\nnltk.download('punkt')\nnltk.download('stopwords')\nstop_words = set(stopwords.words('english'))\n\n# Tokenize the job descriptions and remove stop words\ndf['tokens'] = df['Job Description'].apply(lambda x: [word for word in word_tokenize(x.lower()) if word.isalpha() and word not in stop_words])\n\n# Flatten the list of tokens and count the frequency of each token\nall_tokens = [token for tokens in df['tokens'] for token in tokens]\nfreq_dist = nltk.FreqDist(all_tokens)\n\n# Plot the 30 most common tokens\nplt.figure(figsize=(10, 6))\nfreq_dist.plot(30)",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -6870,7 +6936,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "d77565a6-409e-4d47-a0d8-1868841e6619"
+      "last_transaction_id": "443d4abe-0e91-42bd-b9b3-e08d8d0584be"
     }
   },
   "nbformat": 4,
