Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6899,20 +6899,17 @@
       "outputs": []
     },
     {
-      "id": "479f2472-2147-43c4-98f6-aa4032409ca6",
+      "id": "bd66dc84-7ad2-4272-9f03-04a790b838e5",
       "cell_type": "code",
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "9935db0c-0977-4e05-9398-bee166bc65d4"
+          "output_collection_id": "ac3e0ef2-a06e-4b3a-97f5-908d7d1183d2"
         },
-        "ExecuteTime": {
-          "end_time": "2023-07-19T16:36:23.971948+00:00",
-          "start_time": "2023-07-19T16:36:19.323587+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
-      "source": "import pandas as pd\nimport nltk\nfrom nltk.corpus import stopwords\nfrom nltk.tokenize import word_tokenize\nfrom collections import Counter\nimport matplotlib.pyplot as plt\n\n# Load the dataset\ndf = pd.read_csv('Uncleaned_DS_jobs.csv')\n\n# Download the set of stop words the first time\nnltk.download('punkt')\nnltk.download('stopwords')\nstop_words = set(stopwords.words('english'))\n\n# Tokenize the job descriptions and remove stop words\ndf['tokens'] = df['Job Description'].apply(lambda x: [word for word in word_tokenize(x.lower()) if word.isalpha() and word not in stop_words])\n\n# Flatten the list of tokens and count the frequency of each token\nall_tokens = [token for tokens in df['tokens'] for token in tokens]\nfreq_dist = nltk.FreqDist(all_tokens)\n\n# Plot the 30 most common tokens\nplt.figure(figsize=(10, 6))\nfreq_dist.plot(30)",
+      "source": "# Tokenize the job descriptions and remove stop words\nunclean_df3['tokens'] = unclean_df3['Job Description'].apply(lambda x: [word for word in word_tokenize(x.lower()) if word.isalpha() and word not in stop_words])\n\n# Group the data by location\ngrouped = unclean_df3.groupby('Location')\n\n# For each group, count the frequency of each token in the job descriptions\nfor name, group in grouped:\n    all_tokens = [token for tokens in group['tokens'] for token in tokens]\n    freq_dist = nltk.FreqDist(all_tokens)\n    print(f'Location: {name}')\n    freq_dist.plot(30)",
       "outputs": []
     }
   ],
@@ -6936,7 +6933,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "443d4abe-0e91-42bd-b9b3-e08d8d0584be"
+      "last_transaction_id": "0d53d426-8a36-4aea-881e-3ef8e63781c3"
     }
   },
   "nbformat": 4,
